                     earlier.
                    Added unmonitor support for prism54
                    Added smarter output on termination, tied to unmonitor
                    Removed zeroing IPs from interfaces going into rfmon.  This
                     places the onus on the drivers to Do The Right Thing, but
                     makes my life a lot easier for restoring card states.
Feb 02 2004  3.1.0  Tweaked probe req handling to assign to_ds
                    Changed panels channel display to show --- for uncontrolled
                     source channels
Feb 01 2004  3.1.0  Fixed broken channel stuff in wlanng to use stored last
                     channel if wext isn't available.
                    Added source picking window for channel locking on multiple
                     sources
                    Added smarter channel hopping setup, added server hopping
                     status to KISMET protocol
Jan 31 2004  3.1.0  wlanng no longer depends on wireless extentions
Jan 28 2004  3.1.0  Panels client now scrolls to next network after tagging
                    Fixed changelog dates (Thanks Alexander...)
                    Added a dirty flag to tcpclient networks listing to save
                     on CPU usage when the network list isn't actually changing
                    Improved use of the dirty flag to conserve cpu
                    Fixed init of a variable in panels
                    Fixed various bugs in panels
Jan 27 2004  3.1.0  Modified internals to packet source handling to allow for
                     restoring card details on sources that support it
                    Merged patch from Pedro for more OpenBSD stuff
                    Merged patch from Sam for more radiotap support on freebsd.
                     Pending a patch to the MadWifi drivers, this should bring
                     functional support for FreeBSD.
Jan 26 2004  3.1.0  Fixed FCS byte trimming for MadWifi, this should fix Kismet